--- a/SASS/components/_cv-overlay.scss
+++ b/SASS/components/_cv-overlay.scss
@@ -13,6 +13,8 @@
 	transform: scale(1.09);
 	transition: opacity 0.5s, transform 0.5s, visibility 0.5s;
 	padding-top: 20px;
+	padding-left: 5px;
+	padding-right: 50px;
 }
 
 #cv-overlay.active {
@@ -32,9 +34,8 @@
 	margin: auto;
 	border-radius: 10px;
 	position: relative;
-	width: 70%;
-	max-width: 500px;
-	min-height: 300px;
+	width: 100%;
+	max-width: 1000px;
 	margin-top: 20px;
 	padding-bottom: 0.5em;
 }
@@ -42,7 +43,7 @@
 #cv-close {
 	position: absolute;
 	top: 5px;
-	right: -50px;
+	right: -40px;
 	font-size: 2.1rem;
 	cursor: pointer;
 	transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
