--- a/SASS/sections/_work.scss
+++ b/SASS/sections/_work.scss
@@ -1,6 +1,10 @@
 @use '../abstracts/colors' as *;
 
 #work {
+    h3 {
+        color: #ffffff;
+        text-align: center;
+    }
     .section-header {
         h1, p {
             margin: 0;
@@ -51,10 +55,12 @@
                 justify-content: center;
                 background-color: rgba(255, 255, 255, 0.3);
                 border-radius: 1em;
+                
                 p {
                     color: black !important;
                     padding: 0 1em ;
                     line-height: 1.5em;
+                    overflow: auto;
                 }
            } 
         }
